<resources>
    <string name="app_name">quiz</string>
    <string name="maths">MATHS</string>
    <string name="science">SCIENCE</string>
    <string name="english">ENGLISH</string>
    <string name="computers">COMPUTERS</string>
    <string name="mq1">Question 1. The average of first 50 natural numbers is …………. .</string>
    <string name="mq2">Question 2. A fraction which bears the same ratio to 1/27 as 3/11 bear to 5/9 is equal to ……….. .</string>
    <string name="mq3">Question 3. The number of 3-digit numbers divisible by 6, is ………….. .</string>
</resources>
